compilers Lab/lab 2/macrojava.output
Terminals unused in grammar

   KEYWORD
   OPERATOR
   EndOfFile
   '>'
   GE
   LE
   NE
   '%'


State 25 conflicts: 4 shift/reduce, 1 reduce/reduce
State 35 conflicts: 4 shift/reduce, 1 reduce/reduce
State 37 conflicts: 4 shift/reduce, 2 reduce/reduce
State 46 conflicts: 8 shift/reduce
State 54 conflicts: 4 shift/reduce, 1 reduce/reduce
State 123 conflicts: 4 shift/reduce
State 124 conflicts: 4 shift/reduce
State 137 conflicts: 1 shift/reduce
State 149 conflicts: 4 shift/reduce
State 160 conflicts: 4 shift/reduce, 1 reduce/reduce
State 162 conflicts: 4 shift/reduce, 1 reduce/reduce
State 165 conflicts: 1 reduce/reduce
State 175 conflicts: 4 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: Goal $end

    1 Goal: MacroDefinition MainClass TypeDeclaration

    2 MainClass: CLASS IDENTIFIER '{' PUBLIC STATIC VOID IDENTIFIER '(' STRING '[' ']' IDENTIFIER ')' '{' recursiveStatement '}' '}'

    3 TypeDeclaration: TypeDeclaration CLASS IDENTIFIER '{' TypeISC MethodDeclaration '}'
    4                | TypeDeclaration CLASS IDENTIFIER EXTENDS IDENTIFIER '{' TypeISC MethodDeclaration '}'
    5                | /* empty */

    6 MethodDeclaration: MethodDeclaration PUBLIC Type IDENTIFIER '(' Type IDENTIFIER CTID ')' '{' TypeISC recursiveStatement RETURN Expression ';' '}'
    7                  | MethodDeclaration PUBLIC Type IDENTIFIER '(' ')' '{' TypeISC recursiveStatement RETURN Expression ';' '}'
    8                  | /* empty */

    9 Type: INT '[' ']'
   10     | BOOLEAN
   11     | INT
   12     | IDENTIFIER

   13 DOT: DOT '.' IDENTIFIER
   14    | DOT '.' IDENTIFIER '(' Expression ')' ';'
   15    | /* empty */

   16 recursiveStatement: /* empty */
   17                   | Statement recursiveStatement

   18 Statement: /* empty */
   19          | '{' recursiveStatement '}'
   20          | IDENTIFIER '=' Expression ';'
   21          | IDENTIFIER '[' Expression ']' '=' Expression ';'
   22          | IF '(' Expression ')' Statement
   23          | IF '(' Expression ')' Statement ELSE Statement
   24          | WHILE '(' Expression ')' Statement
   25          | IDENTIFIER '(' Expression ComExp ')' ';'
   26          | IDENTIFIER '(' ')' ';'
   27          | IDENTIFIER DOT

   28 MacroDefExpression: '#' DEFINE IDENTIFIER '(' IDENTIFIER ComIden ')' '(' Expression ')'
   29                   | '#' DEFINE IDENTIFIER '(' ')' '(' Expression ')'

   30 MacroDefStatement: '#' DEFINE IDENTIFIER '(' IDENTIFIER ComIden ')' '{' recursiveStatement '}'
   31                  | '#' DEFINE IDENTIFIER '(' ')' '{' recursiveStatement '}'

   32 ComExp: ComExp ',' Expression
   33       | /* empty */

   34 ComIden: ComIden ';' IDENTIFIER
   35        | /* empty */

   36 MacroDefinition: MacroDefinition MacroDefExpression
   37                | MacroDefinition MacroDefStatement
   38                | /* empty */

   39 TypeISC: TypeISC Type IDENTIFIER ';'
   40        | /* empty */

   41 CTID: CTID ',' Type IDENTIFIER
   42     | /* empty */

   43 Expression: PrimaryExpression '&' PrimaryExpression
   44           | PrimaryExpression '<' PrimaryExpression
   45           | PrimaryExpression '+' PrimaryExpression
   46           | PrimaryExpression '-' PrimaryExpression
   47           | PrimaryExpression '*' PrimaryExpression
   48           | PrimaryExpression '/' PrimaryExpression
   49           | PrimaryExpression '[' PrimaryExpression ']'
   50           | PrimaryExpression '.' length
   51           | PrimaryExpression '.' IDENTIFIER '(' Expression ComExp ')'
   52           | PrimaryExpression '.' IDENTIFIER '(' ')'
   53           | IDENTIFIER '(' Expression ComExp ')'
   54           | IDENTIFIER '(' ')'
   55           | PrimaryExpression

   56 PrimaryExpression: INTVAL
   57                  | BOOLVAL
   58                  | IDENTIFIER
   59                  | THIS
   60                  | NEW INT '[' Expression ']'
   61                  | NEW IDENTIFIER '(' ')'
   62                  | '!' Expression
   63                  | '(' Expression ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 62
'#' (35) 28 29 30 31
'%' (37)
'&' (38) 43
'(' (40) 2 6 7 14 22 23 24 25 26 28 29 30 31 51 52 53 54 61 63
')' (41) 2 6 7 14 22 23 24 25 26 28 29 30 31 51 52 53 54 61 63
'*' (42) 47
'+' (43) 45
',' (44) 32 41
'-' (45) 46
'.' (46) 13 14 50 51 52
'/' (47) 48
';' (59) 6 7 14 20 21 25 26 34 39
'<' (60) 44
'=' (61) 20 21
'>' (62)
'[' (91) 2 9 21 49 60
']' (93) 2 9 21 49 60
'{' (123) 2 3 4 6 7 19 30 31
'}' (125) 2 3 4 6 7 19 30 31
error (256)
INTVAL (258) 56
BOOLVAL (259) 57
KEYWORD (260)
OPERATOR (261)
IDENTIFIER (262) 2 3 4 6 7 12 13 14 20 21 25 26 27 28 29 30 31 34 39
    41 51 52 53 54 58 61
THIS (263) 59
NEW (264) 60 61
RETURN (265) 6 7
CLASS (266) 2 3 4
DEFINE (267) 28 29 30 31
PUBLIC (268) 2 6 7
STATIC (269) 2
VOID (270) 2
INT (271) 9 11 60
BOOLEAN (272) 10
IF (273) 22 23
ELSE (274) 23
WHILE (275) 24
EXTENDS (276) 4
EndOfFile (277)
STRING (278) 2
length (279) 50
GE (280)
LE (281)
NE (282)


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
Goal (49)
    on left: 1, on right: 0
MainClass (50)
    on left: 2, on right: 1
TypeDeclaration (51)
    on left: 3 4 5, on right: 1 3 4
MethodDeclaration (52)
    on left: 6 7 8, on right: 3 4 6 7
Type (53)
    on left: 9 10 11 12, on right: 6 7 39 41
DOT (54)
    on left: 13 14 15, on right: 13 14 27
recursiveStatement (55)
    on left: 16 17, on right: 2 6 7 17 19 30 31
Statement (56)
    on left: 18 19 20 21 22 23 24 25 26 27, on right: 17 22 23 24
MacroDefExpression (57)
    on left: 28 29, on right: 36
MacroDefStatement (58)
    on left: 30 31, on right: 37
ComExp (59)
    on left: 32 33, on right: 25 32 51 53
ComIden (60)
    on left: 34 35, on right: 28 30 34
MacroDefinition (61)
    on left: 36 37 38, on right: 1 36 37
TypeISC (62)
    on left: 39 40, on right: 3 4 6 7 39
CTID (63)
    on left: 41 42, on right: 6 41
Expression (64)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55, on right: 6 7
    14 20 21 22 23 24 25 28 29 32 51 53 60 62 63
PrimaryExpression (65)
    on left: 56 57 58 59 60 61 62 63, on right: 43 44 45 46 47 48 49
    50 51 52 55


state 0

    0 $accept: . Goal $end

    $default  reduce using rule 38 (MacroDefinition)

    Goal             go to state 1
    MacroDefinition  go to state 2


state 1

    0 $accept: Goal . $end

    $end  shift, and go to state 3


state 2

    1 Goal: MacroDefinition . MainClass TypeDeclaration
   36 MacroDefinition: MacroDefinition . MacroDefExpression
   37                | MacroDefinition . MacroDefStatement

    CLASS  shift, and go to state 4
    '#'    shift, and go to state 5

    MainClass           go to state 6
    MacroDefExpression  go to state 7
    MacroDefStatement   go to state 8


state 3

    0 $accept: Goal $end .

    $default  accept


state 4

    2 MainClass: CLASS . IDENTIFIER '{' PUBLIC STATIC VOID IDENTIFIER '(' STRING '[' ']' IDENTIFIER ')' '{' recursiveStatement '}' '}'

    IDENTIFIER  shift, and go to state 9


state 5

   28 MacroDefExpression: '#' . DEFINE IDENTIFIER '(' IDENTIFIER ComIden ')' '(' Expression ')'
   29                   | '#' . DEFINE IDENTIFIER '(' ')' '(' Expression ')'
   30 MacroDefStatement: '#' . DEFINE IDENTIFIER '(' IDENTIFIER ComIden ')' '{' recursiveStatement '}'
   31                  | '#' . DEFINE IDENTIFIER '(' ')' '{' recursiveStatement '}'

    DEFINE  shift, and go to state 10


state 6

    1 Goal: MacroDefinition MainClass . TypeDeclaration

    $default  reduce using rule 5 (TypeDeclaration)

    TypeDeclaration  go to state 11


state 7

   36 MacroDefinition: MacroDefinition MacroDefExpression .

    $default  reduce using rule 36 (MacroDefinition)


state 8

   37 MacroDefinition: MacroDefinition MacroDefStatement .

    $default  reduce using rule 37 (MacroDefinition)


state 9

    2 MainClass: CLASS IDENTIFIER . '{' PUBLIC STATIC VOID IDENTIFIER '(' STRING '[' ']' IDENTIFIER ')' '{' recursiveStatement '}' '}'

    '{'  shift, and go to state 12


state 10

   28 MacroDefExpression: '#' DEFINE . IDENTIFIER '(' IDENTIFIER ComIden ')' '(' Expression ')'
   29                   | '#' DEFINE . IDENTIFIER '(' ')' '(' Expression ')'
   30 MacroDefStatement: '#' DEFINE . IDENTIFIER '(' IDENTIFIER ComIden ')' '{' recursiveStatement '}'
   31                  | '#' DEFINE . IDENTIFIER '(' ')' '{' recursiveStatement '}'

    IDENTIFIER  shift, and go to state 13


state 11

    1 Goal: MacroDefinition MainClass TypeDeclaration .
    3 TypeDeclaration: TypeDeclaration . CLASS IDENTIFIER '{' TypeISC MethodDeclaration '}'
    4                | TypeDeclaration . CLASS IDENTIFIER EXTENDS IDENTIFIER '{' TypeISC MethodDeclaration '}'

    CLASS  shift, and go to state 14

    $default  reduce using rule 1 (Goal)


state 12

    2 MainClass: CLASS IDENTIFIER '{' . PUBLIC STATIC VOID IDENTIFIER '(' STRING '[' ']' IDENTIFIER ')' '{' recursiveStatement '}' '}'

    PUBLIC  shift, and go to state 15


state 13

   28 MacroDefExpression: '#' DEFINE IDENTIFIER . '(' IDENTIFIER ComIden ')' '(' Expression ')'
   29                   | '#' DEFINE IDENTIFIER . '(' ')' '(' Expression ')'
   30 MacroDefStatement: '#' DEFINE IDENTIFIER . '(' IDENTIFIER ComIden ')' '{' recursiveStatement '}'
   31                  | '#' DEFINE IDENTIFIER . '(' ')' '{' recursiveStatement '}'

    '('  shift, and go to state 16


state 14

    3 TypeDeclaration: TypeDeclaration CLASS . IDENTIFIER '{' TypeISC MethodDeclaration '}'
    4                | TypeDeclaration CLASS . IDENTIFIER EXTENDS IDENTIFIER '{' TypeISC MethodDeclaration '}'

    IDENTIFIER  shift, and go to state 17


state 15

    2 MainClass: CLASS IDENTIFIER '{' PUBLIC . STATIC VOID IDENTIFIER '(' STRING '[' ']' IDENTIFIER ')' '{' recursiveStatement '}' '}'

    STATIC  shift, and go to state 18


state 16

   28 MacroDefExpression: '#' DEFINE IDENTIFIER '(' . IDENTIFIER ComIden ')' '(' Expression ')'
   29                   | '#' DEFINE IDENTIFIER '(' . ')' '(' Expression ')'
   30 MacroDefStatement: '#' DEFINE IDENTIFIER '(' . IDENTIFIER ComIden ')' '{' recursiveStatement '}'
   31                  | '#' DEFINE IDENTIFIER '(' . ')' '{' recursiveStatement '}'

    IDENTIFIER  shift, and go to state 19
    ')'         shift, and go to state 20


state 17

    3 TypeDeclaration: TypeDeclaration CLASS IDENTIFIER . '{' TypeISC MethodDeclaration '}'
    4                | TypeDeclaration CLASS IDENTIFIER . EXTENDS IDENTIFIER '{' TypeISC MethodDeclaration '}'

    EXTENDS  shift, and go to state 21
    '{'      shift, and go to state 22


state 18

    2 MainClass: CLASS IDENTIFIER '{' PUBLIC STATIC . VOID IDENTIFIER '(' STRING '[' ']' IDENTIFIER ')' '{' recursiveStatement '}' '}'

    VOID  shift, and go to state 23


state 19

   28 MacroDefExpression: '#' DEFINE IDENTIFIER '(' IDENTIFIER . ComIden ')' '(' Expression ')'
   30 MacroDefStatement: '#' DEFINE IDENTIFIER '(' IDENTIFIER . ComIden ')' '{' recursiveStatement '}'

    $default  reduce using rule 35 (ComIden)

    ComIden  go to state 24


state 20

   29 MacroDefExpression: '#' DEFINE IDENTIFIER '(' ')' . '(' Expression ')'
   31 MacroDefStatement: '#' DEFINE IDENTIFIER '(' ')' . '{' recursiveStatement '}'

    '{'  shift, and go to state 25
    '('  shift, and go to state 26


state 21

    4 TypeDeclaration: TypeDeclaration CLASS IDENTIFIER EXTENDS . IDENTIFIER '{' TypeISC MethodDeclaration '}'

    IDENTIFIER  shift, and go to state 27


state 22

    3 TypeDeclaration: TypeDeclaration CLASS IDENTIFIER '{' . TypeISC MethodDeclaration '}'

    $default  reduce using rule 40 (TypeISC)

    TypeISC  go to state 28


state 23

    2 MainClass: CLASS IDENTIFIER '{' PUBLIC STATIC VOID . IDENTIFIER '(' STRING '[' ']' IDENTIFIER ')' '{' recursiveStatement '}' '}'

    IDENTIFIER  shift, and go to state 29


state 24

   28 MacroDefExpression: '#' DEFINE IDENTIFIER '(' IDENTIFIER ComIden . ')' '(' Expression ')'
   30 MacroDefStatement: '#' DEFINE IDENTIFIER '(' IDENTIFIER ComIden . ')' '{' recursiveStatement '}'
   34 ComIden: ComIden . ';' IDENTIFIER

    ')'  shift, and go to state 30
    ';'  shift, and go to state 31


state 25

   31 MacroDefStatement: '#' DEFINE IDENTIFIER '(' ')' '{' . recursiveStatement '}'

    IDENTIFIER  shift, and go to state 32
    IF          shift, and go to state 33
    WHILE       shift, and go to state 34
    '{'         shift, and go to state 35

    IDENTIFIER  [reduce using rule 18 (Statement)]
    IF          [reduce using rule 18 (Statement)]
    WHILE       [reduce using rule 18 (Statement)]
    '{'         [reduce using rule 18 (Statement)]
    '}'         reduce using rule 16 (recursiveStatement)
    '}'         [reduce using rule 18 (Statement)]
    $default    reduce using rule 16 (recursiveStatement)

    recursiveStatement  go to state 36
    Statement           go to state 37


state 26

   29 MacroDefExpression: '#' DEFINE IDENTIFIER '(' ')' '(' . Expression ')'

    INTVAL      shift, and go to state 38
    BOOLVAL     shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    THIS        shift, and go to state 41
    NEW         shift, and go to state 42
    '('         shift, and go to state 43
    '!'         shift, and go to state 44

    Expression         go to state 45
    PrimaryExpression  go to state 46


state 27

    4 TypeDeclaration: TypeDeclaration CLASS IDENTIFIER EXTENDS IDENTIFIER . '{' TypeISC MethodDeclaration '}'

    '{'  shift, and go to state 47


state 28

    3 TypeDeclaration: TypeDeclaration CLASS IDENTIFIER '{' TypeISC . MethodDeclaration '}'
   39 TypeISC: TypeISC . Type IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 48
    INT         shift, and go to state 49
    BOOLEAN     shift, and go to state 50

    $default  reduce using rule 8 (MethodDeclaration)

    MethodDeclaration  go to state 51
    Type               go to state 52


state 29

    2 MainClass: CLASS IDENTIFIER '{' PUBLIC STATIC VOID IDENTIFIER . '(' STRING '[' ']' IDENTIFIER ')' '{' recursiveStatement '}' '}'

    '('  shift, and go to state 53


state 30

   28 MacroDefExpression: '#' DEFINE IDENTIFIER '(' IDENTIFIER ComIden ')' . '(' Expression ')'
   30 MacroDefStatement: '#' DEFINE IDENTIFIER '(' IDENTIFIER ComIden ')' . '{' recursiveStatement '}'

    '{'  shift, and go to state 54
    '('  shift, and go to state 55


state 31

   34 ComIden: ComIden ';' . IDENTIFIER

    IDENTIFIER  shift, and go to state 56


state 32

   20 Statement: IDENTIFIER . '=' Expression ';'
   21          | IDENTIFIER . '[' Expression ']' '=' Expression ';'
   25          | IDENTIFIER . '(' Expression ComExp ')' ';'
   26          | IDENTIFIER . '(' ')' ';'
   27          | IDENTIFIER . DOT

    '='  shift, and go to state 57
    '('  shift, and go to state 58
    '['  shift, and go to state 59

    $default  reduce using rule 15 (DOT)

    DOT  go to state 60


state 33

   22 Statement: IF . '(' Expression ')' Statement
   23          | IF . '(' Expression ')' Statement ELSE Statement

    '('  shift, and go to state 61


state 34

   24 Statement: WHILE . '(' Expression ')' Statement

    '('  shift, and go to state 62


state 35

   19 Statement: '{' . recursiveStatement '}'

    IDENTIFIER  shift, and go to state 32
    IF          shift, and go to state 33
    WHILE       shift, and go to state 34
    '{'         shift, and go to state 35

    IDENTIFIER  [reduce using rule 18 (Statement)]
    IF          [reduce using rule 18 (Statement)]
    WHILE       [reduce using rule 18 (Statement)]
    '{'         [reduce using rule 18 (Statement)]
    '}'         reduce using rule 16 (recursiveStatement)
    '}'         [reduce using rule 18 (Statement)]
    $default    reduce using rule 16 (recursiveStatement)

    recursiveStatement  go to state 63
    Statement           go to state 37


state 36

   31 MacroDefStatement: '#' DEFINE IDENTIFIER '(' ')' '{' recursiveStatement . '}'

    '}'  shift, and go to state 64


state 37

   17 recursiveStatement: Statement . recursiveStatement

    IDENTIFIER  shift, and go to state 32
    IF          shift, and go to state 33
    WHILE       shift, and go to state 34
    '{'         shift, and go to state 35

    IDENTIFIER  [reduce using rule 18 (Statement)]
    RETURN      reduce using rule 16 (recursiveStatement)
    RETURN      [reduce using rule 18 (Statement)]
    IF          [reduce using rule 18 (Statement)]
    WHILE       [reduce using rule 18 (Statement)]
    '{'         [reduce using rule 18 (Statement)]
    '}'         reduce using rule 16 (recursiveStatement)
    '}'         [reduce using rule 18 (Statement)]
    $default    reduce using rule 16 (recursiveStatement)

    recursiveStatement  go to state 65
    Statement           go to state 37


state 38

   56 PrimaryExpression: INTVAL .

    $default  reduce using rule 56 (PrimaryExpression)


state 39

   57 PrimaryExpression: BOOLVAL .

    $default  reduce using rule 57 (PrimaryExpression)


state 40

   53 Expression: IDENTIFIER . '(' Expression ComExp ')'
   54           | IDENTIFIER . '(' ')'
   58 PrimaryExpression: IDENTIFIER .

    '('  shift, and go to state 66

    $default  reduce using rule 58 (PrimaryExpression)


state 41

   59 PrimaryExpression: THIS .

    $default  reduce using rule 59 (PrimaryExpression)


state 42

   60 PrimaryExpression: NEW . INT '[' Expression ']'
   61                  | NEW . IDENTIFIER '(' ')'

    IDENTIFIER  shift, and go to state 67
    INT         shift, and go to state 68


state 43

   63 PrimaryExpression: '(' . Expression ')'

    INTVAL      shift, and go to state 38
    BOOLVAL     shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    THIS        shift, and go to state 41
    NEW         shift, and go to state 42
    '('         shift, and go to state 43
    '!'         shift, and go to state 44

    Expression         go to state 69
    PrimaryExpression  go to state 46


state 44

   62 PrimaryExpression: '!' . Expression

    INTVAL      shift, and go to state 38
    BOOLVAL     shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    THIS        shift, and go to state 41
    NEW         shift, and go to state 42
    '('         shift, and go to state 43
    '!'         shift, and go to state 44

    Expression         go to state 70
    PrimaryExpression  go to state 46


state 45

   29 MacroDefExpression: '#' DEFINE IDENTIFIER '(' ')' '(' Expression . ')'

    ')'  shift, and go to state 71


state 46

   43 Expression: PrimaryExpression . '&' PrimaryExpression
   44           | PrimaryExpression . '<' PrimaryExpression
   45           | PrimaryExpression . '+' PrimaryExpression
   46           | PrimaryExpression . '-' PrimaryExpression
   47           | PrimaryExpression . '*' PrimaryExpression
   48           | PrimaryExpression . '/' PrimaryExpression
   49           | PrimaryExpression . '[' PrimaryExpression ']'
   50           | PrimaryExpression . '.' length
   51           | PrimaryExpression . '.' IDENTIFIER '(' Expression ComExp ')'
   52           | PrimaryExpression . '.' IDENTIFIER '(' ')'
   55           | PrimaryExpression .

    '<'  shift, and go to state 72
    '+'  shift, and go to state 73
    '-'  shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76
    '['  shift, and go to state 77
    '.'  shift, and go to state 78
    '&'  shift, and go to state 79

    '<'       [reduce using rule 55 (Expression)]
    '+'       [reduce using rule 55 (Expression)]
    '-'       [reduce using rule 55 (Expression)]
    '*'       [reduce using rule 55 (Expression)]
    '/'       [reduce using rule 55 (Expression)]
    '['       [reduce using rule 55 (Expression)]
    '.'       [reduce using rule 55 (Expression)]
    '&'       [reduce using rule 55 (Expression)]
    $default  reduce using rule 55 (Expression)


state 47

    4 TypeDeclaration: TypeDeclaration CLASS IDENTIFIER EXTENDS IDENTIFIER '{' . TypeISC MethodDeclaration '}'

    $default  reduce using rule 40 (TypeISC)

    TypeISC  go to state 80


state 48

   12 Type: IDENTIFIER .

    $default  reduce using rule 12 (Type)


state 49

    9 Type: INT . '[' ']'
   11     | INT .

    '['  shift, and go to state 81

    $default  reduce using rule 11 (Type)


state 50

   10 Type: BOOLEAN .

    $default  reduce using rule 10 (Type)


state 51

    3 TypeDeclaration: TypeDeclaration CLASS IDENTIFIER '{' TypeISC MethodDeclaration . '}'
    6 MethodDeclaration: MethodDeclaration . PUBLIC Type IDENTIFIER '(' Type IDENTIFIER CTID ')' '{' TypeISC recursiveStatement RETURN Expression ';' '}'
    7                  | MethodDeclaration . PUBLIC Type IDENTIFIER '(' ')' '{' TypeISC recursiveStatement RETURN Expression ';' '}'

    PUBLIC  shift, and go to state 82
    '}'     shift, and go to state 83


state 52

   39 TypeISC: TypeISC Type . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 84


state 53

    2 MainClass: CLASS IDENTIFIER '{' PUBLIC STATIC VOID IDENTIFIER '(' . STRING '[' ']' IDENTIFIER ')' '{' recursiveStatement '}' '}'

    STRING  shift, and go to state 85


state 54

   30 MacroDefStatement: '#' DEFINE IDENTIFIER '(' IDENTIFIER ComIden ')' '{' . recursiveStatement '}'

    IDENTIFIER  shift, and go to state 32
    IF          shift, and go to state 33
    WHILE       shift, and go to state 34
    '{'         shift, and go to state 35

    IDENTIFIER  [reduce using rule 18 (Statement)]
    IF          [reduce using rule 18 (Statement)]
    WHILE       [reduce using rule 18 (Statement)]
    '{'         [reduce using rule 18 (Statement)]
    '}'         reduce using rule 16 (recursiveStatement)
    '}'         [reduce using rule 18 (Statement)]
    $default    reduce using rule 16 (recursiveStatement)

    recursiveStatement  go to state 86
    Statement           go to state 37


state 55

   28 MacroDefExpression: '#' DEFINE IDENTIFIER '(' IDENTIFIER ComIden ')' '(' . Expression ')'

    INTVAL      shift, and go to state 38
    BOOLVAL     shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    THIS        shift, and go to state 41
    NEW         shift, and go to state 42
    '('         shift, and go to state 43
    '!'         shift, and go to state 44

    Expression         go to state 87
    PrimaryExpression  go to state 46


state 56

   34 ComIden: ComIden ';' IDENTIFIER .

    $default  reduce using rule 34 (ComIden)


state 57

   20 Statement: IDENTIFIER '=' . Expression ';'

    INTVAL      shift, and go to state 38
    BOOLVAL     shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    THIS        shift, and go to state 41
    NEW         shift, and go to state 42
    '('         shift, and go to state 43
    '!'         shift, and go to state 44

    Expression         go to state 88
    PrimaryExpression  go to state 46


state 58

   25 Statement: IDENTIFIER '(' . Expression ComExp ')' ';'
   26          | IDENTIFIER '(' . ')' ';'

    INTVAL      shift, and go to state 38
    BOOLVAL     shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    THIS        shift, and go to state 41
    NEW         shift, and go to state 42
    '('         shift, and go to state 43
    ')'         shift, and go to state 89
    '!'         shift, and go to state 44

    Expression         go to state 90
    PrimaryExpression  go to state 46


state 59

   21 Statement: IDENTIFIER '[' . Expression ']' '=' Expression ';'

    INTVAL      shift, and go to state 38
    BOOLVAL     shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    THIS        shift, and go to state 41
    NEW         shift, and go to state 42
    '('         shift, and go to state 43
    '!'         shift, and go to state 44

    Expression         go to state 91
    PrimaryExpression  go to state 46


state 60

   13 DOT: DOT . '.' IDENTIFIER
   14    | DOT . '.' IDENTIFIER '(' Expression ')' ';'
   27 Statement: IDENTIFIER DOT .

    '.'  shift, and go to state 92

    $default  reduce using rule 27 (Statement)


state 61

   22 Statement: IF '(' . Expression ')' Statement
   23          | IF '(' . Expression ')' Statement ELSE Statement

    INTVAL      shift, and go to state 38
    BOOLVAL     shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    THIS        shift, and go to state 41
    NEW         shift, and go to state 42
    '('         shift, and go to state 43
    '!'         shift, and go to state 44

    Expression         go to state 93
    PrimaryExpression  go to state 46


state 62

   24 Statement: WHILE '(' . Expression ')' Statement

    INTVAL      shift, and go to state 38
    BOOLVAL     shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    THIS        shift, and go to state 41
    NEW         shift, and go to state 42
    '('         shift, and go to state 43
    '!'         shift, and go to state 44

    Expression         go to state 94
    PrimaryExpression  go to state 46


state 63

   19 Statement: '{' recursiveStatement . '}'

    '}'  shift, and go to state 95


state 64

   31 MacroDefStatement: '#' DEFINE IDENTIFIER '(' ')' '{' recursiveStatement '}' .

    $default  reduce using rule 31 (MacroDefStatement)


state 65

   17 recursiveStatement: Statement recursiveStatement .

    $default  reduce using rule 17 (recursiveStatement)


state 66

   53 Expression: IDENTIFIER '(' . Expression ComExp ')'
   54           | IDENTIFIER '(' . ')'

    INTVAL      shift, and go to state 38
    BOOLVAL     shift, and go to state 39
    IDENTIFIER  shift, and go to state 40
    THIS        shift, and go to state 41
    NEW         shift, and go to state 42
    '('         shift, and go to state 43
    ')'         shift, and go to state 96
    '!'         shift, and go to state 44

    Expression         go to state 97
    PrimaryExpression  go to state 46


state 67

   61 PrimaryExpression: NEW IDENTIFIER . '(' ')'

    '('  shift, and go to state 98


state 68

   60 PrimaryExpression: NEW INT . '[' Expression ']'

    '['  shift, and go to state 99


state 69

   63 PrimaryExpression: '(' Expression . ')'

    ')'  shift, and go to state 100


state 70

   62 PrimaryExpression: '!' Expression .

    $default  reduce using rule 62 (PrimaryExpression)


state 71

   29 MacroDefExpression: '#' DEFINE IDENTIFIER '(' ')' '(' Expression ')' .

    $default  reduce using rule 29 (MacroDefExpression)


state 72

   44 Expression: PrimaryExpression '<' . PrimaryExpression

    INTVAL      shift, and go to state 38
    BOOLVAL     shift, and go to state 39
    IDENTIFIER  shift, and go to state 101
    THIS        shift, and go to state 41
    NEW         shift, and go to state 42
    '('         shift, and go to state 43
    '!'         shift, and go to state 44

    PrimaryExpression  go to state 102


state 73

   45 Expression: PrimaryExpression '+' . PrimaryExpression

    INTVAL      shift, and go to state 38
    BOOLVAL     shift, and go to state 39
    IDENTIFIER  shift, and go to state 101
    THIS        shift, and go to state 41
    NEW         shift, and go to state 42
    '('         shift, and go to state 43
    '!'         shift, and go to state 44

    PrimaryExpression  go to state 103


state 74

   46 Expression: PrimaryExpression '-' . PrimaryExpression

    INTVAL      shift, and go to state 38
    BOOLVAL     shift, and go to state 39
    IDENTIFIER  shift, and go to state 101
    THIS        shift, and go to state 41
    NEW         shift, and go to state 42
    '('         shift, and go to state 43
    '!'         shift, and go to state 44

    PrimaryExpression  go to state 104


state 75

   47 Expression: PrimaryExpression '*' . PrimaryExpression

    INTVAL      shift, and go to state 38
    BOOLVAL     shift, and go to state 39
    IDENTIFIER  shift, and go to state 101
    THIS        shift, and go to state 41
    NEW         shift, and go to state 42
    '('         shift, and go to state 43
    '!'         shift, and go to state 44

    PrimaryExpression  go to state 105


state 76

   48 Expression: PrimaryExpression '/' . PrimaryExpression

    INTVAL      shift, and go to state 38
    BOOLVAL     shift, and go to state 39
    IDENTIFIER  shift, and go to state 101
    THIS        shift, and go to state 41
    NEW         shift, and go to state 42
    '('         shift, and go to state 43
    '!'         shift, and go to state 44

    PrimaryExpression  go to state 106


state 77

   49 Expression: PrimaryExpression '[' . PrimaryExpression ']'

    INTVAL      shift, and go to state 38
    BOOLVAL     shift, and go to state 39
    IDENTIFIER  shift, and go to state 101
    THIS        shift, and go to state 41
    NEW         shift, and go to state 42
    '('         shift, and go to state 43
    '!'         shift, and go to state 44

    PrimaryExpression  go to state 107


state 78

   50 Expression: PrimaryExpression '.' . length
   51           | PrimaryExpression '.' . IDENTIFIER '(' Expression ComExp ')'
   52           | PrimaryExpression '.' . IDENTIFIER '(' ')'

    IDENTIFIER  shift, and go to state 108
    length      shift, and go to state 109


state 79

   43 Expression: PrimaryExpression '&' . PrimaryExpression

    INTVAL      shift, and go to state 38
    BOOLVAL     shift, and go to state 39
    IDENTIFIER  shift, and go to state 101
    THIS        shift, and go to state 41
    NEW         shift, and go to state 42
    '('         shift, and go to state 43
    '!'         shift, and go to state 44

    PrimaryExpression  go to state 110


state 80

    4 TypeDeclaration: TypeDeclaration CLASS IDENTIFIER EXTENDS IDENTIFIER '{' TypeISC . MethodDeclaration '}'
   39 TypeISC: TypeISC . Type IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 48
    INT         shift, and go to state 49
    BOOLEAN     shift, and go to state 50

    $default  reduce using rule 8 (MethodDeclaration)

    MethodDeclaration  go to state 111
    Type               go to state 52


state 81

    9 Type: INT '[' . ']'

    ']'  shift, and go to state 112


state 82

    6 MethodDeclaration: MethodDeclaration PUBLIC . Type IDENTIFIER '(' Type IDENTIFIER CTID ')' '{' TypeISC recursiveStatement RETURN Expression ';' '}'
    7                  | MethodDeclaration PUBLIC . Type IDENTIFIER '(' ')' '{' TypeISC recursiveStatement RETURN Expression ';' '}'

    IDENTIFIER  shift, and go to state 48
    INT         shift, and go to state 49
    BOOLEAN     shift, and go to state 50

    Type  go to state 113


state 83

    3 TypeDeclaration: TypeDeclaration CLASS IDENTIFIER '{' TypeISC MethodDeclaration '}' .

    $default  reduce using rule 3 (TypeDeclaration)


state 84

   39 TypeISC: TypeISC Type IDENTIFIER . ';'

    ';'  shift, and go to state 114


state 85

    2 MainClass: CLASS IDENTIFIER '{' PUBLIC STATIC VOID IDENTIFIER '(' STRING . '[' ']' IDENTIFIER ')' '{' recursiveStatement '}' '}'

    '['  shift, and go to state 115


state 86

   30 MacroDefStatement: '#' DEFINE IDENTIFIER '(' IDENTIFIER ComIden ')' '{' recursiveStatement . '}'

    '}'  shift, and go to state 116


state 87

   28 MacroDefExpression: '#' DEFINE IDENTIFIER '(' IDENTIFIER ComIden ')' '(' Expression . ')'

    ')'  shift, and go to state 117


state 88

   20 Statement: IDENTIFIER '=' Expression . ';'

    ';'  shift, and go to state 118

